@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.oliyumoliyum" name="Oliyum Oliyum" version="2.0.4" provider-name="codenx">
+<addon id="plugin.video.oliyumoliyum" name="Oliyum Oliyum" version="2.0.5" provider-name="codenx">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
 	 <import addon="script.module.simplejson" version="2.0.10" />
