@@ -1,6 +1,16 @@
 <?xml version="1.0" ?>
 <categories>
    <category name='Masala'>
+      <channel name='Sun Tv EU'>
+         <url>http://88.150.177.146/1-Sun/mystream.m3u8</url>
+         <thumb>http://www.lyngsat-logo.com/hires/ss/sun_tv_us.png</thumb>
+      </channel>
+
+      <channel name='Sun Tv PogoTV.eu'>
+         <url>rtmp://89.248.163.3/fms22 playpath=suntv swfUrl=http://tags.kbcast.com/jwplayer/jwplayer.flash.swf token=%PK92(nK110. pageUrl=http://www.kbcast.com/embed.php?live=animal&vw=600&vh=450 conn=S:OK swfVfy=1 live=true timeout=15</url>
+         <thumb>http://www.lyngsat-logo.com/hires/ss/sun_tv_us.png</thumb>
+      </channel>
+
       <channel name='Vijay TV'>
          <url>rtmpe://50.7.102.194/sunrtmplayback/ app=sunrtmplayback/ playpath=vijaytv_1 token=frACE6aMeGuB swfUrl=http://www.watchsuntv.com/play/flash/secure.swf pageUrl=http://www.watchsuntv.com/play/ swfVfy=true live=true timeout=30</url>
          <thumb>http://static3.wikia.nocookie.net/__cb20110929123041/logopedia/images/7/7f/Star_Vijay.png</thumb>
@@ -207,6 +217,148 @@
       <channel name='Vaanavil Music'>
          <url>rtmpe://68.235.37.141/minnalwebs/ playpath=vaanavil1 swfUrl=http://www.watchsuntv.com/play/flash/secure.swf token=frACE6aMeGuB pageURL=http://www.watchsuntv.com/play swfVfy=true live=true timeout=12</url>
          <thumb>http://4.bp.blogspot.com/-W5qIU2tIJf0/Usp_piz_BcI/AAAAAAAACXk/CtrdXL7OlKE/s1600/vaanaviltv.jpg</thumb>
+      </channel>
+   </category>
+
+   <category name='Radio'>
+      <channel name='IBC Tamil'>
+         <url>http://streambharathi.ibctamil.fm:6176</url>
+         <thumb>http://media.navi-x.org/images/icons/2downarrow.png</thumb>
+      </channel>
+
+      <channel name='TRT Tamil Olli'>
+         <url>http://trttamil.relay-network.com:8024</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s110752q.png</thumnb>
+      </channel>
+
+      <channel name='Thamizhamutham Radio'>
+         <url>http://s6.voscast.com:7188</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s157441q.png</thumb>
+      </channel>
+
+      <channel name='ILC Tamil Radio'>
+         <url>http://s6.voscast.com:8484/</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s133204q.png</thumb>
+      </channel>
+
+      <channel name='European Tamil Radio'>
+         <url>http://cast2.serverhostingcenter.com:8646/stream</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s96888q.png</thumb>
+      </channel>
+
+      <channel name='Canadian Tamil Radio'>
+         <url>http://live.ctr247.com:9000/ctrlive</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s7415q.png</thumb>
+      </channel>
+
+      <channel name='Tamil Aruvi Radio'>
+         <url>http://66.90.103.189:8852/</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s106735q.png</thumb>
+      </channel>
+
+      <channel name='Geetham Tamil Radio'>
+         <url>http://www.geethamradio.com:8020/hifi.mp3</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s113467q.png</thumb>
+      </channel>
+
+      <channel name='Geetham Tamil Radio - Non Stop Old Song'>
+         <url>http://www.geethamradio.com:8020/old_hifi.mp3</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s113467q.png</thumb>
+      </channel>
+
+      <channel name='Geetham Tamil Radio - Non Stop 80s'>
+         <url>http://www.geethamradio.com:8020/80s_lofi.mp3</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s113467q.png</thumb>
+      </channel>
+
+      <channel name='Puradsi Fm'>
+         <url>http://puradsifm.net:9994/</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s172414q.png</thumb>
+      </channel>
+           
+      <channel name='EBC Tamil'>
+         <url>http://78.129.196.73:80</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s182928q.png</thumb>
+      </channel>
+
+      <channel name='Tamil On-Air'>
+         <url>http://tamilonair.com:8012</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s182715q.png</thumb>
+      </channel>
+
+      <channel name='ATBC - Australia Tamil Radio'>
+         <url>http://s7.viastreaming.net:7920/</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s111349q.png</thumb>
+      </channel>
+
+      <channel name='International Tamil Radio'>
+         <url>http://server.tamil.fm:8000/live</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s100623q.png</thumb>
+      </channel>
+
+      <channel name='Vegam Tamil Radio'>
+         <url>http://live.vegam.info:8020/live</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s136512q.png</thumb>
+      </channel>
+
+      <channel name='Chennai FM Rainbow 101.4 (Tamil)'>
+         <url>http://euroshoutcast.com:8000</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s111115q.png</thumb>
+      </channel>
+
+      <channel name='A9 RADIO'>
+         <url>http://sc8.streamingpulse.info:9000</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s179556q.png</thumb>
+      </channel>
+
+      <channel name='Radio Devaprasannam'>
+         <url>http://174.36.206.197:8016/</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s165563q.png</thumb>
+      </channel>
+
+      <channel name='Radiospathy'>
+         <url>http://premiumca2.listen2myradio.com/tunein.php/pkanagas/playlist.pls</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s151626q.png</thumb>
+      </channel>
+
+      <channel name='Messiah Radio'>
+         <url>http://108.166.161.221:8476</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s186819q.png</thumb>
+      </channel>
+
+      <channel name='SLBC Tamil National Service 101.3 (Tamil)'>
+         <url>http://220.247.227.4/live</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s44977q.png</thumb>
+      </channel>
+
+      <channel name='Sooriyan FM 103.2 (Tamil)'>
+         <url>http://188.138.95.120:8050</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s8571q.png</thumb>
+      </channel>
+
+      <channel name='Zajil FM'>
+         <url>http://zajilfm.com:9998/</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s140476q.png</thumb>
+      </channel>
+
+      <channel name='JEI FM'>
+         <url>http://144.76.13.38:8808/</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s165583q.png</thumb>
+      </channel>
+
+      <channel name='THHR FM'>
+         <url>http://108.166.161.206:8602</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s181505q.png</thumb>
+      </channel>
+
+      <channel name='DJSiran Tamil FM'>
+         <url>http://streaming203.radionomy.com/DJSiran-Tamil-FM?group=803&countrycode=US&similarprocess=0&crashed=0</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s127516q.png</thumb>
+      </channel>
+
+      <channel name='Syham Radio'>
+         <url>http://shyamradio.com/shyam.asx</url>
+         <thumb>http://d1i6vahw24eb07.cloudfront.net/s109305q.png</thumb>
       </channel>
    </category>
 </categories>
